[gd_scene load_steps=5 format=3 uid="uid://2lnc21bfjtgl"]

[ext_resource type="Texture2D" uid="uid://7ql7jrugb5hi" path="res://Assets/Textures/Items/Weapons/javelin_3_new.png" id="1_8dktf"]
[ext_resource type="Script" path="res://Scripts/Player/javelin.gd" id="1_fpqfj"]
[ext_resource type="AudioStream" uid="uid://brtgc1p8c6c1m" path="res://Assets/Audio/SoundEffect/woosh.wav" id="3_8g7vi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hy2v"]
size = Vector2(33.9411, 2.82843)

[node name="Javelin" type="Area2D" groups=["attack"]]
top_level = true
collision_layer = 2
collision_mask = 5
script = ExtResource("1_fpqfj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8dktf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.38419e-07, -7.15256e-07)
rotation = 0.785398
shape = SubResource("RectangleShape2D_5hy2v")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ChangeDirTimer" type="Timer" parent="."]

[node name="ResetPosTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="snd_play" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8g7vi")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirTimer" to="." method="_on_change_dir_timer_timeout"]
[connection signal="timeout" from="ResetPosTimer" to="." method="_on_reset_pos_timer_timeout"]
